[gd_scene load_steps=2 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_mainmenu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.18, 1)

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "ROAD OF WAR"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -230.0
offset_right = 200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.88, 0.88, 0.88, 1)
text = "Incremental Prestige RPG"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -200.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Start Game"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Options"

[node name="CreditsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Credits"

[node name="SaveButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Save Game"

[node name="LoadButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Load Game"

[node name="StatisticsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Statistics"

[node name="AchievementsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Achievements"

[node name="PrestigeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Prestige"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "v1.0.0"
horizontal_alignment = 2

